crates/reactor-ffi/include/reactor_ffi.h


typedef struct ReactorHandle ReactorHandle;
typedef void (*reactor_on_status_fn)(const char *status, void *userdata);
typedef void (*reactor_on_error_fn)(const char *error_json, void *userdata);
typedef void (*reactor_on_message_fn)(const char *msg_json, void *userdata);
typedef void (*reactor_on_runtime_message_fn)(const char *msg_json, void *userdata);
typedef void (*reactor_on_track_fn)(const char *name, const char *mid_or_null, void *userdata);
typedef void (*reactor_on_capabilities_fn)(const char *caps_json, void *userdata);
typedef void (*reactor_on_session_id_fn)(const char *session_id_or_null, void *userdata);
typedef void (*reactor_on_frame_fn)(
    const char *track_name,
    const uint8_t *data, uint32_t width, uint32_t height,
    uint64_t frame_id,       
    uint64_t timestamp_us,
    const uint8_t *user_data, uint32_t user_data_len, 
    void *userdata
);
typedef void (*reactor_on_audio_fn)(const char *track_name, const int16_t *samples, uint32_t num_samples, uint32_t sample_rate, uint32_t channels, void *userdata);
typedef struct ReactorCallbacks {
    reactor_on_status_fn          on_status;           
    reactor_on_error_fn           on_error;            
    reactor_on_message_fn         on_message;          
    reactor_on_runtime_message_fn on_runtime_message;  
    reactor_on_track_fn           on_track;            
    reactor_on_capabilities_fn    on_capabilities;     
    reactor_on_session_id_fn      on_session_id;       
    reactor_on_frame_fn           on_frame;            
    reactor_on_audio_fn           on_audio;            
    void                         *userdata;             
} ReactorCallbacks;
typedef void (*reactor_completion_fn)(
    int         ok,
    const char *result_json,
    const char *error_json,
    void       *userdata
);
ReactorHandle *reactor_create(
    const char           *api_url,
    const char           *model_name,
    const char           *jwt,        
    int                   local,
    int                   auto_resume_tracks,
    const ReactorCallbacks *callbacks, 
    const char           *sdk_version, 
    const char           *sdk_type     
);
ReactorHandle *reactor_create_with_adm(
    const char           *api_url,
    const char           *model_name,
    const char           *jwt,        
    int                   local,
    int                   auto_resume_tracks,
    const ReactorCallbacks *callbacks, 
    int                   adm_mode,
    const char           *sdk_version, 
    const char           *sdk_type     
);
int reactor_destroy(ReactorHandle *handle);
void reactor_connect(
    ReactorHandle       *handle,
    const char          *session_id,     
    const uint32_t      *connection_id,  
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_disconnect(
    ReactorHandle       *handle,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_reconnect(
    ReactorHandle       *handle,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_publish_track(
    ReactorHandle       *handle,
    const char          *name,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_pause_track(
    ReactorHandle       *handle,
    const char          *name,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_resume_track(
    ReactorHandle       *handle,
    const char          *name,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_set_bitrate(
    ReactorHandle       *handle,
    int32_t              min_bps,
    int32_t              start_bps,
    int32_t              max_bps,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_set_track_bitrate(
    ReactorHandle       *handle,
    const char          *name,
    int32_t              min_bps,
    int32_t              max_bps,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_request_clip(
    ReactorHandle       *handle,
    double               duration_seconds,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_request_recording(
    ReactorHandle       *handle,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_request_schema(
    ReactorHandle       *handle,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_send_command(
    ReactorHandle       *handle,
    const char          *name,
    const char          *args_json,     
    const char          *uploads_json,  
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_upload_file(
    ReactorHandle       *handle,
    const char          *path,
    reactor_completion_fn completion,
    void                *userdata
);
void reactor_upload_bytes(
    ReactorHandle       *handle,
    const uint8_t       *data,
    size_t               len,
    const char          *name,
    const char          *mime_type,
    reactor_completion_fn completion,
    void                *userdata
);
char *reactor_unpublish_track(
    ReactorHandle *handle,
    const char    *name
);
const char *reactor_status(ReactorHandle *handle);
char *reactor_session_id(ReactorHandle *handle);
char *reactor_tracks(ReactorHandle *handle);
char *reactor_paused_tracks(ReactorHandle *handle);
void reactor_free_string(char *s);
void reactor_push_video_frame(
    ReactorHandle *handle,
    const char    *track_name,
    const uint8_t *data,
    uint32_t       width,
    uint32_t       height
);
void reactor_push_video_frame_with_metadata(
    ReactorHandle *handle,
    const char    *track_name,
    const uint8_t *data,
    uint32_t       width,
    uint32_t       height,
    const uint8_t *user_data,   
    uint32_t       user_data_len
);
int64_t reactor_time_micros(void);
void reactor_push_video_frame_with_metadata_at(
    ReactorHandle *handle,
    const char    *track_name,
    const uint8_t *data,
    uint32_t       width,
    uint32_t       height,
    const uint8_t *user_data,   
    uint32_t       user_data_len,
    int64_t        capture_time_us
);
void reactor_push_audio_frame(
    ReactorHandle  *handle,
    const char     *track_name,
    const int16_t  *data,
    uint32_t        samples_per_channel,
    uint32_t        sample_rate,
    uint32_t        num_channels
);